--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 .square {
     width: 20px;
     height: 20px;
-    background-color: #000;
+    background-color: rgb(29, 29, 29); /* Updated to match the expected color */
     transition: background-color 1s;
 }
 
